--- a/index.html
+++ b/index.html
@@ -30,43 +30,35 @@
   
   <div class="input-group mb-3">
     <div class="input-group-prepend">
-      <span class="input-group-text" id="basic-addon1">@</span>
+      <span class="input-group-text" id="basic-addon1"></span>
     </div>
-    <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+    <input type="text" class="form-control" placeholder="search Term" aria-label="searchTerm" aria-describedby="basic-addon1">
   </div>
   
-  <div class="input-group mb-3">
-    <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="basic-addon2">
-    <div class="input-group-append">
-      <span class="input-group-text" id="basic-addon2">@example.com</span>
-    </div>
-  </div>
-  
-  <label for="basic-url">Your vanity URL</label>
-  <div class="input-group mb-3">
-    <div class="input-group-prepend">
-      <span class="input-group-text" id="basic-addon3">https://example.com/users/</span>
-    </div>
-    <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3">
-  </div>
-  
+  <label for="basic-url">Number of Record to Retrieve</label>
   <div class="input-group mb-3">
     <div class="input-group-prepend">
       <span class="input-group-text">$</span>
     </div>
     <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
     <div class="input-group-append">
-      <span class="input-group-text">.00</span>
+      <span class="input-group-text">+/-</span>
     </div>
   </div>
   
-  <div class="input-group">
-    <div class="input-group-prepend">
-      <span class="input-group-text">With textarea</span>
+
+  <br/>
+  <div class="input-group mb-3">
+    <input type="text" class="form-control" placeholder="Start year (optional):" aria-label="numberRecords" aria-describedby="basic-addon2">
+    <div class="input-group-append">
     </div>
-    <textarea class="form-control" aria-label="With textarea"></textarea>
   </div>
-  
+  <br/>
+  <div class="input-group mb-3">
+    <input type="text" class="form-control" placeholder="End of year (optional):" aria-label="numberRecords" aria-describedby="basic-addon2">
+    <div class="input-group-append">
+    </div>
+  </div>
   
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
